# comfyui-lenscowboy-lcbe

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: schema-check.yml
lcbe_client/: __init__.py  auth.py  errors.py  http.py
nodes/: __init__.py  load_shot.py  save.py
schemas/: .sha256  lcbe_layout.schema.json
scripts/: sync-schema.sh
web/: lcbe.js
