[project]
name = "comfyui-lenscowboy-lcbe"
description = "ComfyUI node for LensCowboy LCBE — load shots, save versions, round-trip with full provenance."
version = "0.1.0"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "jsonschema>=4.18",
]

[project.urls]
Repository = "https://github.com/Lenscowboy/comfyui-lenscowboy-lcbe"
"Bug Tracker" = "https://github.com/Lenscowboy/comfyui-lenscowboy-lcbe/issues"

[tool.comfy]
PublisherId = "lenscowboy"
DisplayName = "LCBE Node"
Tags = ["lcbe", "lenscowboy", "pipeline", "shot-management", "video", "vfx", "production"]
